# Stellar-Unified-Price-Oracle-Aggregator-API-Contract

./: CONTRIBUTING.md  Dockerfile  README.md  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: contract-ci.yml
contracts/price-oracle/: Cargo.toml
contracts/price-oracle/src/: admin.rs  assets.rs  debug.rs  errors.rs  events.rs  history.rs  lib.rs  prices.rs  prop_tests.rs  sources.rs  test.rs  test_helpers.rs  types.rs
