[package]
name = "price-oracle"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { version = "26" }

[dev-dependencies]
soroban-sdk = { version = "26", features = ["testutils"] }
proptest = { version = "1.5.0", default-features = false, features = ["std"] }
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "oracle_benchmarks"
harness = false
